--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,4 +1,3 @@
-
 .Header{
   background-color:var(--primary-color);
   display: flex;
@@ -6,7 +5,6 @@
   height: 80px;
   justify-content: space-between;
   align-items: center;
-
 }
 
 .Logo{
@@ -21,6 +19,18 @@
   letter-spacing: 0.165em;
   padding: 10px 30px;
   text-shadow: 1px 1px 10px #000000;
+}
+
+.Header .menu-bar{
+  font-family: "Montserrat", sans-serif;
+  font-weight: bolder;
+  font-size: 18px;
+  height: 45px;
+  line-height: 45px;
+  text-align: center;
+  letter-spacing: 0.165em;
+  text-decoration: none;
+  
 }
 
 .Header form input{
