--- a/src/components/menuCart/MenuCart.css
+++ b/src/components/menuCart/MenuCart.css
@@ -6,19 +6,21 @@
 .nav-menu {
     background-color: #d7e5ff;
     margin-top: 100px;
-    width: 450px;
+    width: 500px;
     height: 100vh;
     position:fixed;
     top: 0;
-    right: -100%;
-    transition: 850ms;
+    opacity: 0;
+    transition: 1ms;
     border-left: solid 1px var(--primary-color);
     border-bottom: solid 1px var(--primary-color);
 }
 
 .nav-menu.active {
+    visibility: visible;
+    opacity: 1;
     right: 0;
-    transition: 350ms;
+    transition: 1ms;
 }
 
 button{
@@ -56,7 +58,7 @@ button{
 
 }
 
-.btn-buy, .btn-buy:visited {
+.btn-buy-cart, .btn-buy-cart:visited {
   background-color: var(--primary-color);
   color:#ffffff;
   width: 350px;
@@ -68,7 +70,7 @@ button{
   text-decoration: none;
 }
 
-.btn-buy:hover{
+.btn-buy-cart:hover{
   opacity: 0.8;
   transition: .4s;
 }
