--- a/src/components/menuCart/MenuCart.css
+++ b/src/components/menuCart/MenuCart.css
@@ -5,22 +5,23 @@
 
 .nav-menu {
     background-color: #d7e5ff;
-    margin-top: 70px;
+    margin-top: 60px;
+    position:absolute;
     width: 500px;
-    height: 100vh;
-    position:fixed;
-    top: 0;
+    border-radius: 8px;
+    border: var(--border);
+    padding: 1rem;
+    overflow: hidden;
     opacity: 0;
-    transition: 1ms;
-    border-left: solid 1px var(--primary-color);
-    border-bottom: solid 1px var(--primary-color);
+    transition: 500ms;
+    transition: height 500ms ease;
 }
 
 .nav-menu.active {
     visibility: visible;
     opacity: 1;
     right: 0;
-    transition: 1ms;
+    transition: 500ms;
 }
 
 button{
