--- a/src/components/cardMovie/CardMovie.css
+++ b/src/components/cardMovie/CardMovie.css
@@ -2,7 +2,7 @@
   display:flex;
   flex-direction: column;
   background-color: #ffffff;
-  border: solid 1px var(--border-item-color);
+  border: solid 1px var(--primary-color);
   max-width: 200px;
   border-radius: 10px;
   font-family:'Montserrat', sans-serif;
