--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,5 +1,5 @@
 .Header{
-  background-color:var(--bg);
+  background-color:var(--primary-color);
   border-bottom: var(--border);
   display: flex;
   padding: 10px;
@@ -53,12 +53,29 @@
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
   text-transform: uppercase;
-  letter-spacing: .2rem;
+  letter-spacing: .1rem;
   cursor: pointer;
+}
+
+.btn-search:hover{
+  filter:brightness(1.2)
 }
 
 .Header .menu-header{
   display: flex;
+}
 
+@media (max-width: 900px)
+{
+  .Header{
+    height: 200px;
+    flex-direction: column;
+    
+    align-items: flex-start;
+   }
 
+   .Header form input{
+    width:200px;
+   }
+   
 }
