--- a/src/components/menuCart/MenuCart.css
+++ b/src/components/menuCart/MenuCart.css
@@ -1,27 +1,89 @@
 .menu-container{
       display: flex;
       font-family: 'Montserrat';
+      justify-content: right;
 }
 
 .nav-menu {
-    background-color: #d7e5ff;
-    margin-top: 60px;
+    background-color: #8B49F5;
+    margin-top: 45px;
     position:absolute;
-    width: 500px;
-    border-radius: 8px;
+    width: 450px;
+    border-radius: 16px;
     border: var(--border);
-    padding: 1rem;
+    padding: 2rem;
     overflow: hidden;
     opacity: 0;
     transition: 500ms;
     transition: height 500ms ease;
 }
-
 .nav-menu.active {
-    visibility: visible;
-    opacity: 1;
-    right: 0;
-    transition: 500ms;
+  visibility: visible;
+  opacity: 1;
+  right: 0;
+  transition: 500ms;
+}
+.menu-bars:hover{
+  color:var(--destak-color);
+  filter: brightness(1.2);
+}
+
+.header-cart{
+  display: flex;
+  align-items: center;
+  justify-content:space-between;
+  
+  margin: 15px;
+}
+
+.header-title{
+  font-size: 20px;
+  text-align: left;
+  color: #ffffff;
+}
+
+.clear-cart{
+  color: var(--destak-color);
+  font-weight: 400;
+  font-size: 14px;
+  text-decoration: underline;
+}
+.clear-cart:hover{
+ color:var(--primary-color);
+}
+
+.item-cart{
+  width: 450px;
+  display: flex;
+  align-items: center;
+  justify-content:space-between;
+  padding: 10px 0;
+  background-color:#713BC7;
+  color: #ffffff;
+  margin-bottom: 10px;
+  border-radius: 8px;
+}
+
+.poster-image-cart{
+  width: 5%;
+  margin: 10px;
+  background-repeat: no-repeat;
+  padding: 40px 40px;
+}
+.title-movie-cart{
+  width: 200px;
+  font-size: 14px;
+  text-align: left;
+  justify-content: left;
+}
+.value-item-cart{
+  display: flex;
+  justify-content:space-evenly;
+  width: 300px;
+  margin-right:0;
+}
+.delete-item-cart:hover{
+  color:var(--destak-color)
 }
 
 button{
@@ -32,47 +94,23 @@ button{
     border: none;
 }
 
-.clear-cart{
-    color: var(--primary-color);
-    font-weight: 600;
-    font-size: 16px;
-    text-decoration: underline;
-}
-
-.header-cart{
-    display: flex;
-    align-items: center;
-    justify-content:space-between;
-    padding: 0 40px;
-}
-
-.item-cart{
-    display: flex;
-    align-items: center;
-    justify-content:space-between;
-    padding: 0 10px;
-    color: var(--primary-color)
-}
-
-.delete-item{
-  color: var(--primary-color);
-
-}
-
 .btn-buy-cart, .btn-buy-cart:visited {
-  background-color: var(--primary-color);
-  color:#ffffff;
+  background-color: #FECF59;
+  color:#896410;
   width: 350px;
-  border-radius: 10px;
+  border-radius: 16px;
   display: flex;  
   justify-content: center;
   padding: 10px;
-  /* align-items: center; */
+  font-size: large;
+  font-weight: 600;
+  align-items: center;
   text-decoration: none;
+  border: solid 1px #896410;
 }
 
 .btn-buy-cart:hover{
-  opacity: 0.8;
+  filter: brightness(1.2); 
   transition: .4s;
 }
 
@@ -85,4 +123,5 @@ button{
 .total-cart{
   display: flex;
   justify-content: space-between;
+  color: #ffffff;
 }
