--- a/src/components/menuCart/MenuCart.css
+++ b/src/components/menuCart/MenuCart.css
@@ -37,7 +37,6 @@
   display: flex;
   align-items: center;
   justify-content:space-between;
-  
   margin: 15px;
 }
 
@@ -123,6 +122,14 @@ button{
 .btn-buy-cart:hover{
   filter: brightness(1.2); 
   transition: .4s;
+}
+
+.item-count{
+  color:var(--primary-color);
+  padding:6px;
+  font-weight:700;
+  border-radius:100%;
+  background-color: var(--destak-color);
 }
 
 .footer{
